<resources>
    <string name="app_name">CourseworkApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="introSlider1_text">
        This application is the personal designed portfolio.
        This application have been designed to showcase my personal details or short bio data.
    </string>
    <string name="next_button">Next</string>
    <string name="introSlider2_text">
         It also contains skills screen where I have mentioned my skills
        I have obtained in my school days as well as hobbies screen where you can find my personal interests
    </string>
    <string name="introSlider3_text">
        Finally, it contains contact screen where you can input your details and ask me any questions
        as well as can give any suggestions to improve my portfolio.
    </string>
    <string name="sliderNumber1">1 / 3</string>
    <string name="sliderNumber2">2 / 3</string>
    <string name="sliderNumber3">3 / 3</string>





    <string name="homeTopNav">Home</string>
    <string name="profileTopNav">Profile</string>
    <string name="skillTopNav">Skill</string>
    <string name="hobbyTopNav">Hobby</string>
    <string name="contactTopNav">Contact</string>

    <string name="welcome_message">Hello and welcome to my portfolio.
        I am very excited to have you here where I can share my life journey and my passions.
    </string>

    <string name="profile_name">Prayatna Rajkarnikar</string>
    <string name="profile_email">prayatna.rajkarnikar@gmail.com</string>
    <string name="dob_heading">DOB:</string>
    <string name="date">2003/10/26</string>
    <string name="age_heading">Age:</string>
    <string name="age">20</string>
    <string name="gender_heading">Gender:</string>
    <string name="gender">Male</string>
    <string name="address_heading">Address:</string>
    <string name="address">Thamel, Kathmandu</string>
    <string name="work_heading">Work:</string>
    <string name="work">Student</string>
    <string name="btnCamera">Camera</string>

    <string name="skill_Programming">Programming</string>
    <string name="programming_skill1">Java</string>
    <string name="programming_skill2">Python</string>
    <string name="programming_skill3">HTML</string>
    <string name="programming_skill4">Dart</string>

    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="expert">Expert</string>

    <string name="skill_Design"> Digital Design</string>
    <string name="design_skill1">Adobe Illustrator</string>
    <string name="design_skill2">Adobe Premiere Pro</string>
    <string name="design_skill3">Adobe After Effects</string>
    <string name="design_skill4">Adobe Photoshop</string>

    <string name="skill_problem_solving">Soft-Skills</string>
    <string name="ps_skill1">Critical Thinking</string>
    <string name="ps_skill2">Decision Making</string>
    <string name="ps_skill3">Adaptability</string>
    <string name="ps_skill4">Collaboration</string>
    <string name="ps_skill5">Time Management</string>

    <string name="hobbies1">Football</string>
    <string name="hobbies2">Anime</string>
    <string name="hobbies3">Digital Designing</string>
    <string name="hobbies4">Drawing</string>
    <string name="hobbies5">Chess</string>

    <string name="contactName">Name</string>
    <string name="contactPhone">Phone Number</string>
    <string name="contactEmail">Email</string>
    <string name="contactDesc">Description</string>
    <string name="btnSubmit">Submit</string>
    <string name="contact_subheading">GET IN TOUCH</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>