<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:id="@+id/topNavProfile"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/topNavHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_bold"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/profileTopNav"
            android:textSize="25sp" />

        <View
            android:id="@+id/topNavView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardProfile"
        android:layout_width="wrap_content"
        android:layout_height="320dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:id="@+id/llDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/topNavProfile"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivMyPicture"
                android:layout_width="180dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/profile_pic" />

            <ImageButton
                android:id="@+id/cameraBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerInside"
                android:onClick="open_camera"
                android:src="@drawable/ic_camera_foreground"
                android:background="@android:color/transparent"
                android:layout_marginStart="250dp"
                android:layout_marginTop="-40dp"
                />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/profile_name"
                android:textAlignment="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_regular"
                android:text="@string/profile_email"
                android:textAlignment="center"
                android:textSize="15sp" />



        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/infoLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="409dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@color/cream"
        android:orientation="vertical"
        android:paddingTop="70dp">

        <LinearLayout
            android:id="@+id/llDOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivDOB"
                android:layout_width="36dp"
                android:layout_height="41dp"
                android:layout_marginStart="25dp"
                android:src="@mipmap/ic_date_of_birth_foreground" />

            <TextView
                android:id="@+id/tvDOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/dob_heading"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/date"
                android:textAlignment="center"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivAge"
                android:layout_width="36dp"
                android:layout_height="41dp"
                android:layout_marginStart="25dp"
                android:src="@mipmap/ic_age_foreground" /> <!-- Added gravity attribute -->

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/age_heading"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvMyAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="47dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/age"
                android:textAlignment="center"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivGender"
                android:layout_width="33dp"
                android:layout_height="41dp"
                android:layout_marginStart="25dp"
                android:src="@mipmap/ic_gender_foreground" /> <!-- Added gravity attribute -->

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/gender_heading"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/MyGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/gender"
                android:textAlignment="center"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivAddress"
                android:layout_width="36dp"
                android:layout_height="41dp"
                android:layout_marginStart="25dp"
                android:src="@mipmap/ic_address_foreground" /> <!-- Added gravity attribute -->

            <TextView
                android:id="@+id/Address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/address_heading"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvMyAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/address"
                android:textAlignment="center"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivWork"
                android:layout_width="36dp"
                android:layout_height="41dp"
                android:layout_marginStart="25dp"
                android:src="@mipmap/ic_work_foreground" />

            <TextView
                android:id="@+id/tvWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/work_heading"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/MyWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/work"
                android:textAlignment="center"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>