<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ContactFragment">

    <LinearLayout
        android:id="@+id/topNavProfile"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/topNavHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:gravity="center"
            android:text="@string/contactTopNav"
            android:textSize="25sp"
            android:fontFamily="@font/nunito_sans_bold" />

        <View
            android:id="@+id/navLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llContactDetails"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_below="@+id/topNavProfile"
        android:layout_marginTop="-10dp"
        android:background="@drawable/contact_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/subHeading"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:id="@+id/vsubHeading1"
                android:layout_width="50dp"
                android:layout_height="1.5dp"
                android:layout_gravity="center"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvSubHead"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:fontFamily="@font/nunito_sans_regular"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/black"
                android:text="@string/contact_subheading"
                android:textSize="18sp" />

            <View
                android:id="@+id/vsubHeading2"
                android:layout_width="50dp"
                android:layout_height="1.5dp"
                android:layout_gravity="center"
                android:background="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivName"
                android:layout_width="36dp"
                android:layout_height="41dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/contactName"
                android:src="@drawable/ic_name_foreground" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:autofillHints="Name"
                android:background="@drawable/contact_rectangle"
                android:fontFamily="@font/nunito_sans_regular"
                android:hint="@string/contactName"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivPhone"
                android:layout_width="36dp"
                android:layout_height="41dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/contactPhone"
                android:src="@drawable/ic_phone_foreground" />

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:autofillHints="Name"
                android:background="@drawable/contact_rectangle"
                android:fontFamily="@font/nunito_sans_regular"
                android:hint="@string/contactPhone"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivEmail"
                android:layout_width="36dp"
                android:layout_height="41dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/contactEmail"
                android:src="@drawable/ic_mail_foreground" />

            <EditText
                android:id="@+id/etMail"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:autofillHints="Name"
                android:background="@drawable/contact_rectangle"
                android:fontFamily="@font/nunito_sans_regular"
                android:hint="@string/contactEmail"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <EditText
            android:id="@+id/etDesc"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:autofillHints="description"
            android:background="@drawable/contact_rectangle"
            android:fontFamily="@font/nunito_sans_regular"
            android:gravity="top|left"
            android:hint="@string/contactDesc"
            android:inputType="textMultiLine"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="275dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/nunito_sans_regular"
        android:text="@string/btnSubmit" />

</RelativeLayout>