<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HobbiesFragment">

    <LinearLayout
        android:id="@+id/topNavHobby"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/topNavHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:gravity="center"
            android:text="@string/hobbyTopNav"
            android:textSize="25sp"
            android:fontFamily="@font/nunito_sans_bold" />

        <View
            android:id="@+id/topNavView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/svHobbies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topNavHobby"
        android:layout_marginTop="2dp">

        <LinearLayout
            android:id="@+id/llMainHobbies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardHobby1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:id="@+id/llHobby1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/tvFootball"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans_bold"
                        android:gravity="center"
                        android:text="@string/hobbies1"
                        android:textSize="25sp" />

                    <ImageView
                        android:id="@+id/ivFootball"
                        android:layout_width="300dp"
                        android:layout_height="120dp"
                        android:src="@drawable/football"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardHobby2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:id="@+id/llHobby2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/tvAnime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans_bold"
                        android:gravity="center"
                        android:text="@string/hobbies2"
                        android:textSize="25sp" />

                    <ImageView
                        android:id="@+id/ivAnime"
                        android:layout_width="300dp"
                        android:layout_height="120dp"
                        android:src="@drawable/anime"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardHobby3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:id="@+id/llHobby3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/tvDesign"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans_bold"
                        android:gravity="center"
                        android:text="@string/hobbies3"
                        android:textSize="25sp" />

                    <ImageView
                        android:id="@+id/ivDesign"
                        android:layout_width="300dp"
                        android:layout_height="120dp"
                        android:src="@drawable/digital"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardHobby4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:id="@+id/llHobby4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/tvDrawing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans_bold"
                        android:gravity="center"
                        android:text="@string/hobbies4"
                        android:textSize="25sp" />

                    <ImageView
                        android:id="@+id/ivDrawing"
                        android:layout_width="300dp"
                        android:layout_height="120dp"
                        android:src="@drawable/drawing"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardHobby5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:id="@+id/llHobby5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/tvChess"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans_bold"
                        android:gravity="center"
                        android:text="@string/hobbies5"
                        android:textSize="25sp" />

                    <ImageView
                        android:id="@+id/ivChess"
                        android:layout_width="300dp"
                        android:layout_height="120dp"
                        android:src="@drawable/chess"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>